<resources>
    <string name="app_name">QPointer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_clock">Clock</string>
    <string name="nav_color">Color</string>
    <string name="nav_alarm">Alarm</string>
    <string name="nav_laser">Laser</string>
    <string name="nav_terminal">Terminal</string>
    <string name="nav_device">Device</string>
    <string name="nav_settings">Settings</string>
</resources>
