<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_clock"
            android:icon="@drawable/ic_menu_clock"
            android:title="@string/nav_clock"/>
        <item
            android:id="@+id/nav_color"
            android:icon="@drawable/ic_menu_color"
            android:title="@string/nav_color"/>
        <item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/ic_menu_alarm"
            android:title="@string/nav_alarm"/>
        <item
            android:id="@+id/nav_laser"
            android:icon="@drawable/ic_menu_laser"
            android:title="@string/nav_laser"/>
        <item
            android:id="@+id/nav_terminal"
            android:icon="@drawable/ic_menu_terminal"
            android:title="@string/nav_terminal"/>
        <item
            android:id="@+id/nav_device"
            android:icon="@drawable/ic_menu_device"
            android:title="@string/nav_device"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/nav_settings"/>
    </group>

</menu>
